--- a/LibraryManagement/pom.xml
+++ b/LibraryManagement/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.lib</groupId>
 	<artifactId>Library_Project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>LibraryManagement</name>
 	<description>Library_ProjectProject</description>
 	<properties>
