--- a/LibraryManagement/Dockerfile
+++ b/LibraryManagement/Dockerfile
@@ -1,4 +1,7 @@
-FROM openjdk:8
-EXPOSE 9099
-ADD target/Library_Project-0.0.1-SNAPSHOT.jar Library_Project-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java", "-jar", "/Library_Project-0.0.1-SNAPSHOT.jar"]
+FROM tomcat:8.0.20-jre8
+COPY target/Library_Project-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/Library_Project-0.0.1-SNAPSHOT.war
+#FROM openjdk:17-alpine
+#FROM openjdk:8
+#EXPOSE 9099
+#ADD target/Library_Project-0.0.1-SNAPSHOT.jar Library_Project-0.0.1-SNAPSHOT.jar
+#ENTRYPOINT ["java", "-jar", "/Library_Project-0.0.1-SNAPSHOT.jar"]
